# freequel

./: COPYING  dev.kingbeencent.freequel.json  meson.build
data/: dev.kingbeencent.freequel.appdata.xml.in  dev.kingbeencent.freequel.desktop.in  dev.kingbeencent.freequel.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: freequel.gresource.xml  main.vala  meson.build  window.ui  window.vala
